--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./src/css/index.css">
 </head>
 <body>
-    <button type="button" class="btn btn-primary">Olá</button>
+    <h1>Olá</h1>
 </body>
 </html>
